# exchange-calendar-notifier

./: README.md  check_code.sh  exchange_checker.py  exchange_checker_gtk.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql-analysis.yml
