[tool.poetry]
name = "exchange-calendar-notifier"
version = "0.1.0"
description = "Get notification for Outlook Exchange mails and calendar"
authors = ["Benjamin <benji81@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
exchangelib = "^3.3.2"
notify-py = "^0.2.3"
PyGObject = "^3.38.0"
keyring = "^21.4.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
bandit = "^1.6.2"
pylint = "^2.6.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | docs
    | migrations
    | \.vscode
    | \.run
    | snapshots
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
combine_as_imports = true
lines_after_imports = 2
force_sort_within_sections = true
sections = '''
    FUTURE
    STDLIB
    THIRDPARTY
    FIRSTPARTY
    TESTS
    LOCALFOLDER
'''
known_tests = "tests"
skip = '''
    scripts
    staticassets
    docs/conf.py
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
